fix: make heading wrap on small screens

--- a/style.scss
+++ b/style.scss
@@ -60,6 +60,7 @@ header {
 .row {
 	display: flex;
 	justify-content: space-between;
+	flex-wrap: wrap;
 }
 
 address,
